adjusted send email button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -66,7 +67,8 @@
         </div>
 
         <h1>Welcome to Otuekong Softwares</h1>
-        <h2>We create <span class="typed" data-typed-items="beautiful graphics, functional websites, working mobile apps"></span></h2>
+        <h2>We create <span class="typed"
+            data-typed-items="beautiful graphics, functional websites, working mobile apps"></span></h2>
         <div class="actions">
           <a href="#contact" class="btn-get-started">Get in Touch</a>
           <a href="#services" class="btn-services">Our Services</a>
@@ -125,7 +127,8 @@
           <div class="col-md-12">
             <h3 class="section-title">About Us</h3>
             <div class="section-title-divider"></div>
-            <p class="section-description">At Otuekong Softwares, our number one priority is to leave our customers happy enough to recommend us to their circles!</p>
+            <p class="section-description">At Otuekong Softwares, our number one priority is to leave our customers
+              happy enough to recommend us to their circles!</p>
           </div>
         </div>
       </div>
@@ -139,12 +142,17 @@
           <div class="col-md-6 about-content">
             <h2 class="about-title">We provide great services and ideas</h2>
             <p class="about-text">
-              Do you already have a brilliant idea and just need people to execute this for you, or you have deep knowledge of a field and you're wondering what software can be developed to make things more efficient in that field? At Otuekong Softwares our mother tongue is software
-              and we're always looking out for ways technology can improve manual processes, leaving humans with more time to do creative work.
+              Do you already have a brilliant idea and just need people to execute this for you, or you have deep
+              knowledge of a field and you're wondering what software can be developed to make things more efficient in
+              that field? At Otuekong Softwares our mother tongue is software
+              and we're always looking out for ways technology can improve manual processes, leaving humans with more
+              time to do creative work.
             </p>
             <p class="about-text">
-              At Otuekong Softwares we work on software ranging from simple blogs, personal/professional webistes and business advertising websites to more complicated software targetted at a more specific audience. We will work with you with the understanding that whatever we are working on is very likely to be your
-              life's work and we will deliver services with that urgency. 
+              At Otuekong Softwares we work on software ranging from simple blogs, personal/professional webistes and
+              business advertising websites to more complicated software targetted at a more specific audience. We will
+              work with you with the understanding that whatever we are working on is very likely to be your
+              life's work and we will deliver services with that urgency.
             </p>
             <p class="about-text">
               Contact us today and let's bring that idea/business to the public.
@@ -161,7 +169,8 @@
           <div class="col-md-12">
             <h3 class="section-title">Our Services</h3>
             <div class="section-title-divider"></div>
-            <p class="section-description">We offer a wide variety of services aimed at taking care of your software needs.</p>
+            <p class="section-description">We offer a wide variety of services aimed at taking care of your software
+              needs.</p>
           </div>
         </div>
 
@@ -169,17 +178,23 @@
           <div class="col-md-4 service-item">
             <div class="service-icon"><i class="fa fa-desktop"></i></div>
             <h4 class="service-title">Websites/Mobile Apps</h4>
-            <p class="service-description">We create highly responsive websites and beautiful mobile applications targeted at both Android and iOS.</p>
+            <p class="service-description">We create highly responsive websites and beautiful mobile applications
+              targeted at both Android and iOS.</p>
           </div>
           <div class="col-md-4 service-item">
             <div class="service-icon"><i class="fa fa-bar-chart"></i></div>
             <h4 class="service-title">Metrics</h4>
-            <p class="service-description">We're all about the numbers! We track what exactly your users tend to use the most in your softwares and use this data to improve on the services we provide to your target audience.</p>
+            <p class="service-description">We're all about the numbers! We track what exactly your users tend to use the
+              most in your softwares and use this data to improve on the services we provide to your target audience.
+            </p>
           </div>
           <div class="col-md-4 service-item">
             <div class="service-icon"><i class="fa fa-paper-plane"></i></div>
             <h4 class="service-title">Feedback</h4>
-            <p class="service-description">We know from experience that keeping an ear to the ground is very important especially in the software industry. We have our hands on the pulse of the software industry and will always recommend what we feel will be of beneficial addition to your software to make sure it hits its potential.</p>
+            <p class="service-description">We know from experience that keeping an ear to the ground is very important
+              especially in the software industry. We have our hands on the pulse of the software industry and will
+              always recommend what we feel will be of beneficial addition to your software to make sure it hits its
+              potential.</p>
           </div>
           <!-- <div class="col-md-4 service-item">
             <div class="service-icon"><i class="fa fa-photo"></i></div>
@@ -189,12 +204,17 @@
           <div class="col-md-4 service-item">
             <div class="service-icon"><i class="fa fa-road"></i></div>
             <h4 class="service-title">Maintainance</h4>
-            <p class="service-description">At Otuekong Softwares we never leave you hanging. We'll provide maintainance for software we develop for you, should anything go wrong. We're also always glad to add more features at your request!</p>
+            <p class="service-description">At Otuekong Softwares we never leave you hanging. We'll provide maintainance
+              for software we develop for you, should anything go wrong. We're also always glad to add more features at
+              your request!</p>
           </div>
           <div class="col-md-4 service-item">
             <div class="service-icon"><i class="fa fa-shopping-bag"></i></div>
             <h4 class="service-title">Securing the Bag</h4>
-            <p class="service-description">Here at Otuekong Softwares we know that the first business of businesses is making profit. We offer integration of payment services into your softwares for easy processing of payments directly into your bank account. This way you can serve customers from anywhere in the world and receive payments in your local currency!</p>
+            <p class="service-description">Here at Otuekong Softwares we know that the first business of businesses is
+              making profit. We offer integration of payment services into your softwares for easy processing of
+              payments directly into your bank account. This way you can serve customers from anywhere in the world and
+              receive payments in your local currency!</p>
           </div>
         </div>
       </div>
@@ -343,7 +363,8 @@
           <div class="col-md-12">
             <h3 class="section-title">Testimonials</h3>
             <div class="section-title-divider"></div>
-            <p class="section-description">Not to toot our own horns, but our clients tend to have strong feelings for us :)</p>
+            <p class="section-description">Not to toot our own horns, but our clients tend to have strong feelings for
+              us :)</p>
           </div>
         </div>
 
@@ -357,7 +378,9 @@
           </div>
           <div class="col-md-9">
             <div class="quote">
-              <b><img src="assets/img/quote_sign_left.png" alt=""></b> It's always a pleasure working with Shalom and Otuekong Softwares as a whole. They are a truly world class team. Would highly recommend! <small><img src="assets/img/quote_sign_right.png" alt=""></small>
+              <b><img src="assets/img/quote_sign_left.png" alt=""></b> It's always a pleasure working with Shalom and
+              Otuekong Softwares as a whole. They are a truly world class team. Would highly recommend! <small><img
+                  src="assets/img/quote_sign_right.png" alt=""></small>
             </div>
           </div>
         </div>
@@ -365,7 +388,9 @@
         <div class="row">
           <div class="col-md-9">
             <div class="quote">
-              <b><img src="assets/img/quote_sign_left.png" alt=""></b> Otuekong Softwares provides amazing services and deliver right on schedule. They are simply amazing. <small><img src="assets/img/quote_sign_right.png" alt=""></small>
+              <b><img src="assets/img/quote_sign_left.png" alt=""></b> Otuekong Softwares provides amazing services and
+              deliver right on schedule. They are simply amazing. <small><img src="assets/img/quote_sign_right.png"
+                  alt=""></small>
             </div>
           </div>
           <div class="col-md-3">
@@ -381,78 +406,6 @@
     </section>
     <!-- End Testimonials Section -->
 
-    <!-- ======= Team Section ======= -->
-    <!-- <section id="team">
-      <div class="container wow fadeInUp">
-        <div class="row">
-          <div class="col-md-12">
-            <h3 class="section-title">Our Team</h3>
-            <div class="section-title-divider"></div>
-            <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-3">
-            <div class="member">
-              <div class="pic"><img src="assets/img/team/team-1.jpg" alt=""></div>
-              <h4>Walter White</h4>
-              <span>Chief Executive Officer</span>
-              <div class="social">
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="member">
-              <div class="pic"><img src="assets/img/team/team-2.jpg" alt=""></div>
-              <h4>Sarah Jhinson</h4>
-              <span>Product Manager</span>
-              <div class="social">
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="member">
-              <div class="pic"><img src="assets/img/team/team-3.jpg" alt=""></div>
-              <h4>William Anderson</h4>
-              <span>CTO</span>
-              <div class="social">
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="member">
-              <div class="pic"><img src="assets/img/team/team-4.jpg" alt=""></div>
-              <h4>Amanda Jepson</h4>
-              <span>Accountant</span>
-              <div class="social">
-                <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-google-plus"></i></a>
-                <a href=""><i class="fa fa-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section> -->
-    <!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact">
@@ -461,7 +414,8 @@
           <div class="col-md-12">
             <h3 class="section-title">Contact Us</h3>
             <div class="section-title-divider"></div>
-            <p class="section-description">You can send a message through this form, or contact us directly using the details below.</p>
+            <p class="section-description">You can send a message through this form, or contact us directly using the
+              details below.</p>
           </div>
         </div>
 
@@ -488,40 +442,10 @@
                 <p>+2348130182206</p>
               </div>
 
+              <button class="btn btn-primary d-block" onclick="sendEmailBro()">Send us an Email!</button>
+
             </div>
           </div>
-
-          
-          <button class="btn btn-primary d-block" onclick="sendEmailBro()">Send us an Email!</button>
-
-          <!-- <div class="col-lg-5 col-md-8">
-            <div class="form">
-              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <div class="validate"></div>
-                </div>
-                <div class="form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                  <div class="validate"></div>
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                  <div class="validate"></div>
-                </div>
-                <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                  <div class="validate"></div>
-                </div>
-                <div class="mb-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-                </div>
-                <div class="text-center"><button type="submit">Send Message</button></div>
-              </form>
-            </div> -->
-          <!-- </div> -->
 
         </div>
       </div>
@@ -538,13 +462,13 @@
             &copy; Copyright <strong>Imperial Theme</strong>. All Rights Reserved
           </div>
           <div class="credits"> -->
-            <!--
+  <!--
             All the links in the footer should remain intact.
             You can delete the links only if you purchased the pro version.
             Licensing information: https://bootstrapmade.com/license/
             Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Imperial
           -->
-            <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+  <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
           </div>
         </div>
       </div>
@@ -570,7 +494,7 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script>
-    function sendEmailBro(){
+    function sendEmailBro() {
       window.open('mailto:shaliz.jhay@gmail.com?subject=subject&body=body');
     }
   </script>
