edited send email text

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                 <p>+2348130182206</p>
               </div>
 
-              <button class="btn btn-primary d-block" onclick="sendEmailBro()">Send us an Email!</button>
+              <button class="btn btn-primary d-block" onclick="sendEmailBro()">Click to send us an Email!</button>
 
             </div>
           </div>
