changed OTUEKONG font, made OBJ come first

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800"
     rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet"> 
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -51,7 +53,7 @@
   ======================================================== -->
   <style>
     .signer {
-      font-family: 'Dancing Script', cursive;
+      font-family: 'Russo One', sans-serif;
     }
   </style>
 </head>
@@ -62,9 +64,9 @@
   <section id="hero">
     <div class="hero-container">
       <div class="wow fadeIn">
-        <div class="hero-logo">
+        <!-- <div class="hero-logo">
           <h1 class="logo mr-auto signer"><a href="index.html">Otuekong</a></h1>
-        </div>
+        </div> -->
 
         <h1>Welcome to Otuekong Softwares</h1>
         <h2>We create <span class="typed"
@@ -83,7 +85,7 @@
 
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt=""></a> -->
       <!-- Uncomment below if you prefer to use a text logo -->
-      <h1 class="logo mr-auto signer"><a href="index.html">Otuekong</a></h1>
+      <h1 class="logo mr-auto signer"><a href="index.html">Otuekong Softwares</a></h1>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -235,21 +237,11 @@
         <div class="row">
           <div class="col-md-3">
             <div class="profile">
-              <div class="pic"><img src="assets/img/enyekekere.jpg" alt=""></div>
-              <h4>Dr. Enyekekere Edet</h4>
-              <span>Promcah Digital Health Solutions</span>
+              <div class="pic"><img src="assets/img/obongodiong.jpg" alt=""></div>
+              <h4>Obongodiong John</h4>
+              <span>Obong Designs</span>
             </div>
           </div>
-          <div class="col-md-9">
-            <div class="quote">
-              <b><img src="assets/img/quote_sign_left.png" alt=""></b> It's always a pleasure working with Shalom and
-              Otuekong Softwares as a whole. They are a truly world class team. Would highly recommend! <small><img
-                  src="assets/img/quote_sign_right.png" alt=""></small>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
           <div class="col-md-9">
             <div class="quote">
               <b><img src="assets/img/quote_sign_left.png" alt=""></b> Otuekong Softwares provides amazing services and
@@ -257,11 +249,21 @@
                   alt=""></small>
             </div>
           </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-9">
+            <div class="quote">
+              <b><img src="assets/img/quote_sign_left.png" alt=""></b> It's always a pleasure working with Shalom and
+              Otuekong Softwares as a whole. They are a truly world class team. Would highly recommend! <small><img
+                  src="assets/img/quote_sign_right.png" alt=""></small>
+            </div>
+          </div>
           <div class="col-md-3">
             <div class="profile">
-              <div class="pic"><img src="assets/img/obongodiong.jpg" alt=""></div>
-              <h4>Obongodiong John</h4>
-              <span>Obong Designs</span>
+              <div class="pic"><img src="assets/img/enyekekere.jpg" alt=""></div>
+              <h4>Dr. Enyekekere Edet</h4>
+              <span>Promcah Digital Health Solutions</span>
             </div>
           </div>
         </div>
