--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Otuekong Softwares</title>
+  <title>Chill Softwares</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -30,8 +30,8 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800"
     rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -65,10 +65,10 @@
     <div class="hero-container">
       <div class="wow fadeIn">
         <!-- <div class="hero-logo">
-          <h1 class="logo mr-auto signer"><a href="index.html">Otuekong</a></h1>
+          <h1 class="logo mr-auto signer"><a href="index.html">Chill</a></h1>
         </div> -->
 
-        <h1>Welcome to Otuekong Softwares</h1>
+        <h1>Welcome to Chill Softwares</h1>
         <h2>We create <span class="typed"
             data-typed-items="beautiful graphics, functional websites, working mobile apps"></span></h2>
         <div class="actions">
@@ -85,7 +85,7 @@
 
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt=""></a> -->
       <!-- Uncomment below if you prefer to use a text logo -->
-      <h1 class="logo mr-auto signer"><a href="index.html">Otuekong Softwares</a></h1>
+      <h1 class="logo mr-auto signer"><a href="index.html">Chill Softwares</a></h1>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -129,7 +129,7 @@
           <div class="col-md-12">
             <h3 class="section-title">About Us</h3>
             <div class="section-title-divider"></div>
-            <p class="section-description">At Otuekong Softwares, our number one priority is to leave our customers
+            <p class="section-description">At Chill Softwares, our number one priority is to leave our customers
               happy enough to recommend us to their circles!</p>
           </div>
         </div>
@@ -146,12 +146,12 @@
             <p class="about-text">
               Do you already have a brilliant idea and just need people to execute this for you, or you have deep
               knowledge of a field and you're wondering what software can be developed to make things more efficient in
-              that field? At Otuekong Softwares our mother tongue is software
+              that field? At Chill Softwares our mother tongue is software
               and we're always looking out for ways technology can improve manual processes, leaving humans with more
               time to do creative work.
             </p>
             <p class="about-text">
-              At Otuekong Softwares we work on software ranging from simple blogs, personal/professional webistes and
+              At Chill Softwares we work on software ranging from simple blogs, personal/professional webistes and
               business advertising websites to more complicated software targetted at a more specific audience. We will
               work with you with the understanding that whatever we are working on is very likely to be your
               life's work and we will deliver services with that urgency.
@@ -206,14 +206,14 @@
           <div class="col-md-4 service-item">
             <div class="service-icon"><i class="fa fa-road"></i></div>
             <h4 class="service-title">Maintainance</h4>
-            <p class="service-description">At Otuekong Softwares we never leave you hanging. We'll provide maintainance
+            <p class="service-description">At Chill Softwares we never leave you hanging. We'll provide maintainance
               for software we develop for you, should anything go wrong. We're also always glad to add more features at
               your request!</p>
           </div>
           <div class="col-md-4 service-item">
             <div class="service-icon"><i class="fa fa-shopping-bag"></i></div>
             <h4 class="service-title">Securing the Bag</h4>
-            <p class="service-description">Here at Otuekong Softwares we know that the first business of businesses is
+            <p class="service-description">Here at Chill Softwares we know that the first business of businesses is
               making profit. We offer integration of payment services into your softwares for easy processing of
               payments directly into your bank account. This way you can serve customers from anywhere in the world and
               receive payments in your local currency!</p>
@@ -244,7 +244,7 @@
           </div>
           <div class="col-md-9">
             <div class="quote">
-              <b><img src="assets/img/quote_sign_left.png" alt=""></b> Otuekong Softwares provides amazing services and
+              <b><img src="assets/img/quote_sign_left.png" alt=""></b> Chill Softwares provides amazing services and
               deliver right on schedule. They are simply amazing. <small><img src="assets/img/quote_sign_right.png"
                   alt=""></small>
             </div>
@@ -255,7 +255,7 @@
           <div class="col-md-9">
             <div class="quote">
               <b><img src="assets/img/quote_sign_left.png" alt=""></b> It's always a pleasure working with Shalom and
-              Otuekong Softwares as a whole. They are a truly world class team. Would highly recommend! <small><img
+              Chill Softwares as a team. They are a truly world class team. Would highly recommend! <small><img
                   src="assets/img/quote_sign_right.png" alt=""></small>
             </div>
           </div>
