went from working mobile apps to performant

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <h1>Welcome to Chill Softwares</h1>
         <h2>We create <span class="typed"
-            data-typed-items="beautiful graphics, functional websites, working mobile apps"></span></h2>
+            data-typed-items="beautiful graphics, functional websites, performant mobile apps"></span></h2>
         <div class="actions">
           <a href="#contact" class="btn-get-started">Get in Touch</a>
           <a href="#services" class="btn-services">Our Services</a>
