edited email addr

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
               <div>
                 <i class="fa fa-envelope"></i>
-                <p>johnprince58@gmail.com</p>
+                <p>chillsoftwares@gmail.com</p>
               </div>
 
               <div>
@@ -361,7 +361,7 @@
   <script src="assets/js/main.js"></script>
   <script>
     function sendEmailBro() {
-      window.open('mailto:shaliz.jhay@gmail.com?subject=subject&body=body');
+      window.open('mailto:chillsoftwares@gmail.com?subject=subject&body=body');
     }
   </script>
 
