modified first agency descriptive text

--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@
           <div class="col-md-12">
             <h3 class="section-title">About Us</h3>
             <div class="section-title-divider"></div>
-            <p class="section-description">At Chill Softwares, our number one priority is to leave our customers
-              happy enough to recommend us to their circles!</p>
+            <p class="section-description">At Chill Softwares, our number one priority is to make the end to end
+              processes of software development, from ideation to product launch as smooth and hassle-free as possible.
+              We make software development chill for our clients.</p>
           </div>
         </div>
       </div>
@@ -361,7 +362,7 @@
   <script src="assets/js/main.js"></script>
   <script>
     function sendEmailBro() {
-      window.open('mailto:chillsoftwares@gmail.com?subject=subject&body=body');
+      window.open('mailto:chillsoftwares@gmail.com');
     }
   </script>
 
