made chill link to urbandict

--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
             <div class="section-title-divider"></div>
             <p class="section-description">At Chill Softwares, our number one priority is to make the end to end
               processes of software development, from ideation to product launch as smooth and hassle-free as possible.
-              We make software development chill for our clients.</p>
+              We make software development <a href="https://www.urbandictionary.com/define.php?term=Chill" ,
+                target="_blank"><i>chill</i></a> for our clients.</p>
           </div>
         </div>
       </div>
