--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Chill Softwares</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <meta content="Software development agency in Nigeria" name="descriptison">
+  <meta
+    content="web development, android development, web developer, android developer, graphic designer, software developer"
+    name="keywords">
 
   <!-- Facebook Opengraph integration: https://developers.facebook.com/docs/sharing/opengraph -->
   <meta property="og:title" content="">
