added meta content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Chill Softwares</title>
-  <meta content="Software development agency in Nigeria" name="descriptison">
+  <meta content="Best software development agency in Nigeria" name="descriptison">
   <meta
     content="web development, android development, web developer, android developer, graphic designer, software developer"
     name="keywords">
