🔥 Fix: changed contact, removed testimonials

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials">
+    <!-- <section id="testimonials">
       <div class="container wow fadeInUp">
         <div class="row">
           <div class="col-md-12">
@@ -273,7 +273,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
     <!-- End Testimonials Section -->
 
 
@@ -292,10 +292,10 @@
         <div class="row justify-content-center">
           <div class="col-lg-3 col-md-4">
             <div class="info">
-              <div>
+              <!-- <div>
                 <i class="fa fa-map-marker"></i>
                 <p>108 Oron Road<br>Uyo, Akwa Ibom State.</p>
-              </div>
+              </div> -->
 
               <div>
                 <i class="fa fa-envelope"></i>
@@ -304,12 +304,12 @@
 
               <div>
                 <i class="fa fa-phone"></i>
-                <p>+2348096110339</p>
+                <p>+2347033884831</p>
               </div>
 
               <div>
-                <i class="fa fa-phone"></i>
-                <p>+2348130182206</p>
+                <i class="fa fa-whatsapp"></i>
+                <p>+2348096110339</p>
               </div>
 
               <button class="btn btn-primary d-block" onclick="sendEmailBro()">Click to send us an Email!</button>
