--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <li><a href="#services">Services</a></li>
           <!-- <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#team">Team</a></li> -->
-          <li><a href="#testimonials">Testimonials</a></li>
+          <!-- <li><a href="#testimonials">Testimonials</a></li> -->
           <!-- <li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -312,7 +312,7 @@
                 <p>+2348096110339</p>
               </div>
 
-              <button class="btn btn-primary d-block" onclick="sendEmailBro()">Click to send us an Email!</button>
+              <!-- <button class="btn btn-primary d-block" onclick="sendEmailBro()">Click to send us an Email!</button> -->
 
             </div>
           </div>
