🔥 Took out form reference from contact us

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
           <div class="col-md-12">
             <h3 class="section-title">Contact Us</h3>
             <div class="section-title-divider"></div>
-            <p class="section-description">You can send a message through this form, or contact us directly using the
+            <p class="section-description">You can contact us directly using the
               details below.</p>
           </div>
         </div>
